--- a/css/Home.css
+++ b/css/Home.css
@@ -1336,7 +1336,7 @@
 
 .u-section-8 .u-image-1 {
   min-height: 783px;
-  background-image: url("../images/Untitled10.jpg");
+  background-image: url("../images/baseball.png");
   background-position: 50% 50%;
 }
 
